// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders a proper number field 1`] = `
<div
  className="field number"
>
  <label
    htmlFor="wpe-content-model[geese][age]"
  >
    Age
  </label>
  <br />
  <input
    defaultValue="100"
    id="wpe-content-model[geese][age]"
    name="wpe-content-model[geese][age]"
    type="number"
  />
</div>
`;

exports[`Field renders a proper text field 1`] = `
<div
  className="field text"
>
  <label
    htmlFor="wpe-content-model[geese][firstName]"
  >
    First Name
  </label>
  <br />
  <input
    defaultValue="John"
    id="wpe-content-model[geese][firstName]"
    name="wpe-content-model[geese][firstName]"
    type="text"
  />
</div>
`;
